--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
 
     <body>
         <nav class="navbar navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">ttt-solution</a>
+            <a class="navbar-brand" href="{{ url_for('index') }}">ttt-solution</a>
         </nav>
 
         {% block content %}{% endblock %}
