--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,23 @@
-{% extends base.html %}
+{% extends 'base.html' %}
 
 {% block title %}
 Solution to the ttt challenge
 {% endblock %}
 
 {% block content %}
+
+<div class="container text-center">
+    <form class="form-inline mt-5" action="" method="post" novalidate>
+        {{ form.hidden_tag() }}
+        <div class="form-group mr-3">
+            {{ form.num(class_="form-control") }}
+        </div>
+        {{ form.submit(class_="btn btn-primary") }}
+    </form>
+</div>
+
+{% include "result.html" %}
+
 
 {% with messages = get_flashed_messages() %}
   {% if messages %}
@@ -17,14 +30,7 @@ Solution to the ttt challenge
   {% endif %}
 {% endwith %}
 
-<div class="container text-center">
-    <form class="form-inline" action="" method="post" validate>
-        {{ form.hidden_tag() }}
-        <div class="form-group">
-            {{ form.num(class_="form-control") }}
-        </div>
-        {{ form.submit(class_="btn btn-primary") }}
-    </form>
-</div>
 
 {% endblock %}
+
+
