Improve mobile layout

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,9 @@ Solution to the ttt challenge
         <div class="form-group mr-3">
             {{ form.num(class_="form-control", placeholder="Input N") }}
         </div>
-        {{ form.submit(class_="btn btn-primary") }}
+        <div class="form-group">
+            {{ form.submit(class_="btn btn-primary") }}
+        </div>
     </form>
 </div>
 
