--- a/templates/result.html
+++ b/templates/result.html
@@ -10,7 +10,7 @@
     <tbody>
         {% for k, v in result %}
         <tr>
-            <th scope="row">{{ loop.index }}</td>
+            <th scope="row">{{ loop.index }}</th>
             <td>{{ k }}</td>
             <td>{{ v }}</td>
         </tr>
