--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@ Solution to the ttt challenge
         </div>
         {% endif %}
         
-        <div class="form-group mr-3">
+        <div class="form-group m-3">
             {{ form.num(class_="form-control", placeholder="Input N") }}
         </div>
         <div class="form-group">
